# pour-decisions

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
data/raw/: SOURCES.md
data/raw/cocktaildb/: drinks.csv  ingredients.csv
docs/learning/: 01-lora-and-adapters.md  02-qlora-vs-lora-vs-full.md  03-mistral-finetune-internals.md  04-vllm-and-guided-json.md  05-eval-metrics.md  06-gpu-memory-math.md  07-failures-and-fixes.md
docs/runbooks/: finetune.md  local-matrix.md  regenerate-merged.md  serve.md
finetune/: 7B.yaml
infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
infra/templates/: serve-bootstrap.sh.tftpl  train-bootstrap.sh.tftpl
reports/: eval-latest.md  local-matrix.json  local-matrix.md
serving/: docker-compose.yml
src/pour_decisions/: build_data.py  cocktaildb.py  dataset.py  eval_run.py  iba.py  metrics.py  prompts.py  schema.py  serve_client.py  silver.py
src/pour_decisions/matrix/: __init__.py  callbacks.py  data_adapters.py  infer.py  jsonparse.py  licensing.py  mlxtrain.py  plots.py  registry.py  render.py  report.py  run_matrix.py  telemetry.py  trainer.py
tests/: test_dataset.py  test_eval_gate.py  test_iba.py  test_matrix_callbacks.py  test_matrix_data_adapters.py  test_matrix_infer.py  test_matrix_jsonparse.py  test_matrix_licensing.py  test_matrix_mlxtrain.py  test_matrix_plots.py  test_matrix_registry.py  test_matrix_render.py  test_matrix_report.py  test_matrix_run.py  test_matrix_telemetry.py  test_matrix_trainer.py  test_metrics.py  test_schema.py  test_serve_client.py  test_silver.py
tests/fixtures/: eval_fixture.json  iba_cocktails_tiny.csv  iba_ingredients_tiny.csv
