[project]
name = "pour-decisions"
version = "0.1.0"
description = "Fine-tune + serve a Mistral open-weight to normalize cocktail measures into JSON."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]
# Heavy/GPU deps (installed only on the GPU box, not in CI):
gpu = ["mistral-common>=1.5", "openai>=1.30", "mlflow>=2.12"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
